# pgai-api

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  config.py  docker-compose.yml  pyproject.toml  readme.md  requirements-dev.txt  requirements-test.txt  requirements.txt  start.sh
.devcontainer/: Dockerfile  devcontainer.json
.docker/ollama/: Dockerfile
.github/workflows/: main.yml
app/: __init__.py
app/common/: database.py  exception_handlers.py  factories.py  models.py  pg_extension.py  rag.py  types.py
app/common/prompt_templates/: page_prompt.j2
app/templates/: page_form.html
app/v1/: logic.py  rag_service.py  routes.py  schema.py
migrations/: env.py  pg_extension.py
migrations/versions/: 02798e54b562_.py  e2afd102cb2d_.py
tests/: conftest.py  factories.py  utilities.py
tests/v1/: test_v1.py
