[project]
name = "pgai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "fastapi[all]==0.100.0",
    "greenlet==3.1.1",
    "gunicorn==20.1.0",
    "ollama==0.4.7",
    "pgai[sqlalchemy]==0.8.1",
    "python-decouple==3.6",
    "rich==13.4.2",
    "sqlalchemy-utils==0.41.1",
]

[tool.uv]
dev-dependencies = [
    "factory-boy==3.3.3",
    "gunicorn==20.1.0",
    "mypy==0.971",
    "pdbpp==0.10.3",
    "pre-commit==4.1.0",
    "pytest-asyncio==0.21.1",
    "pytest==7.1.2",
    "ruff==0.9.5",
    "testcontainers-postgres==0.0.1rc1",
    "wemake-python-styleguide==0.16.1",
]
